--- a/ArtistGallery/build.gradle
+++ b/ArtistGallery/build.gradle
@@ -22,6 +22,7 @@ dependencies {
 	
 	compile project(':JPAArtistGallery')
 	
+	implementation 'org.springframework.boot:spring-boot-starter-tomcat'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	runtimeOnly 'mysql:mysql-connector-java'
